--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
-       var map = L.map('map').setView([50.06, 19.94], 12);
+       var map = L.map('map').setView([50.0647, 19.9450], 13);
 
        // Warstwa z kafelkami
        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -33,8 +33,8 @@
          // Marker
          L.marker(latlng).addTo(map);
 
-         // Promień -> 5 km
-         L.circle(latlng, {radius: 500, color: 'red', fillOpacity: 0.2}).addTo(map);
+         // Okrąg o promieniu 5 km
+         L.circle(latlng, {radius: 5000, color: 'red', fillOpacity: 0.2}).addTo(map);
 
          // Wysłanie zgłoszenia do backendu
          fetch("/api/reports", {
