--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
   <script>
     var map = L.map('map').setView([50.0647, 19.9450], 13);
     var alertMode = false;
-    var isLoggedIn = {{ 'true' if user_email else 'false' }};
+    var isLoggedIn = user_email == null ? 'false' : 'true';
     var selectedLocation = null; // Przechowuje wybrane współrzędne
     var tempMarker = null; // Tymczasowy marker
     var tempCircle = null; // Tymczasowy okrąg
