--- a/templates/index.html
+++ b/templates/index.html
@@ -131,10 +131,10 @@
   <script>
     var map = L.map('map').setView([50.0647, 19.9450], 13);
     var alertMode = false;
-    var isLoggedIn = user_email == null ? 'false' : 'true';
     var selectedLocation = null; // Przechowuje wybrane współrzędne
     var tempMarker = null; // Tymczasowy marker
     var tempCircle = null; // Tymczasowy okrąg
+
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 19,
@@ -153,7 +153,8 @@
 
     // --- ALERT MODE - CZĘŚĆ 1: WYBÓR LOKALIZACJI ---
     function enableAlertMode() {
-        if (!isLoggedIn) {
+      alert('{{user_email}}')
+        if (!'{{user_email}}') {
             alert("Musisz być zalogowany, aby dodać alert.");
             return;
         }
