--- a/src/website/templates/index.html
+++ b/src/website/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8">
-  <title>DangerMap</title>
+  <title>ThreatLens</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Leaflet CSS -->
