--- a/src/website/templates/login.html
+++ b/src/website/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8">
-  <title>Logowanie — DangerMap</title>
+  <title>Logowanie — ThreatLens</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css') }}">
 
