Better view of ThreatLens

--- a/src/website/templates/index.html
+++ b/src/website/templates/index.html
@@ -10,6 +10,7 @@
 
   <!-- Your CSS -->
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/index.css') }}">
+  <<!--     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> -->
 
   <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js" defer></script>
@@ -20,6 +21,7 @@
 
 </head>
 <body>
+<<!--     <script src="{{ url_for('static', filename='js/main.js') }}"></script> -->
   <div id="map"></div>
 
   <!-- Hamburger button -->
@@ -27,9 +29,7 @@
 
   <!-- Side menu -->
   <div class="side-menu" id="menu">
-    <h2>Menu
-      <button class="close-btn" onclick="toggleMenu()">×</button>
-    </h2>
+    <h2>Menu ThreatLens</h2>
 
     <button onclick="enableAlertMode()">Zgłoś alert</button>
 
@@ -43,10 +43,8 @@
       <a href="{{ url_for('login') }}">Zaloguj się</a>
     {% endif %}
 
-    <!-- Przycisk zamykania menu i powrotu do mapy -->
-    <button style="color: #d62828" onclick="closeMenuAndReturnToMap()">Zamknij menu</button>
+    <button class="close-btn" onclick="toggleMenu()" style="color: #d62828">Zamknij menu</button>
   </div>
-
 
 </body>
 </html>
