--- a/src/website/static/styles/index.css
+++ b/src/website/static/styles/index.css
@@ -36,18 +36,20 @@
       top: 0;
       left: -250px;
       width: 250px;
-      height: 100%;
+      height: 100vh;
       background: white;
       box-shadow: 2px 0 5px rgba(0,0,0,0.3);
       z-index: 1100;
       transition: left 0.3s ease;
-      padding: 20px;
+      /*padding: 10px;*/
     }
     .side-menu.open {
       left: 0;
     }
     .side-menu h2 {
-      margin-top: 0;
+      margin-top: 20px;
+      margin-left: 25px;
+      margin-right: 15px;
       display: flex;
       justify-content: space-between;
       align-items: center;
