--- a/src/website/static/styles/index.css
+++ b/src/website/static/styles/index.css
@@ -87,3 +87,25 @@
       border-radius: 4px;
       margin: 15px 0;
     }
+    .user-location-icon {
+        z-index: 1000 !important; 
+    }
+
+    .fa-spin {
+        -webkit-animation: fa-spin 1s infinite linear;
+        animation: fa-spin 1s infinite linear;
+    }
+    @-webkit-keyframes fa-spin {
+        0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); }
+        100% { -webkit-transform: rotate(359deg); transform: rotate(359deg); }
+    }
+    @keyframes fa-spin {
+        0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); }
+        100% { -webkit-transform: rotate(359deg); transform: rotate(359deg); }
+    }
+
+    #location-btn-icon {
+        font-size: 1.2em;
+        line-height: 30px; 
+        color: #333; 
+    }
