--- a/src/website/templates/index.html
+++ b/src/website/templates/index.html
@@ -11,6 +11,8 @@
   <!-- Your CSS -->
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/index.css') }}">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js" defer></script>
 
