divided index.js

--- a/src/website/templates/index.html
+++ b/src/website/templates/index.html
@@ -18,7 +18,10 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js" defer></script>
 
 <!-- Your JS -->
+  <script src="{{ url_for('static', filename='scripts/heatmap.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='scripts/alert.js') }}" defer></script>
     <script src="{{ url_for('static', filename='scripts/index.js') }}" defer></script>
+
 
 
 </head>
