--- a/src/website/templates/index.html
+++ b/src/website/templates/index.html
@@ -43,9 +43,9 @@
         <p>Zalogowany jako:</p>
         <strong>{{ user_email }}</strong>
       </div>
-      <a href="{{ url_for('logout') }}">Wyloguj</a>
+      <a href="{{ url_for('auth.logout') }}">Wyloguj</a>
     {% else %}
-      <a href="{{ url_for('login') }}">Zaloguj się</a>
+      <a href="{{ url_for('auth.login') }}">Zaloguj się</a>
     {% endif %}
 
     <button class="close-btn" onclick="toggleMenu()" style="color: #d62828">Zamknij menu</button>
