--- a/src/website/templates/login.html
+++ b/src/website/templates/login.html
@@ -21,7 +21,7 @@
         {% endif %}
       {% endwith %}
 
-      <form method="POST" action="{{ url_for('login') }}">
+      <form method="POST" action="{{ url_for('auth.login') }}">
         {{ form.hidden_tag() }}
         <div class="form-group">
           {{ form.email.label }}
